--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -5,7 +5,7 @@
 <div>
     <slot/>
 </div>
-
+<script defer src="https://admin.mitufun.top/script.js" data-website-id="7b1ef8eb-df5b-46c1-84e1-3112ac3cffc9"></script>
 <style is:global lang="stylus">
 
 /* utils */
